# flare

./: .gitignore  Cargo.toml  LICENSE  rust-toolchain
src/: main.rs
src/commands/: mod.rs
src/commands/screencontrol/: mod.rs
src/commands/screencontrol/encoders/: mod.rs
src/commands/screencontrol/framebuffer/: mod.rs
src/commands/screencontrol/network/: mod.rs
src/commands/screencontrol/protocol/: mod.rs
