[package]
name = "flare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = "4.4.18"
jpeg-encoder = "0.6.0"
libwebp-sys = "0.9.4"
memmap = "0.7.0"
mmap = "0.1.1"
nix = { version = "0.27.1", features = ["ioctl"] }
png = "0.17.11"
serde = { version = "1.0.196", features = ["derive"] }